@@ -267,13 +267,13 @@
 #define SFSET_HAS_OVERRIDE_SIZE(st,x) ((st).flags.common.s.has_override_size = !!(x))
 #define SMSET_HAS_OVERRIDE_SIZE(st,x) ((st).flag_mask.common.s.has_override_size = !!(x))
 #define SCSET_HAS_OVERRIDE_SIZE(st,x) ((st).change_mask.common.s.has_override_size = !!(x))
-#define SHAS_STIPLED_TITLE(sf) ((sf).common.s.has_stipled_title)
-#define SFHAS_STIPLED_TITLE(st) ((st).flags.common.s.has_stipled_title)
-#define SMHAS_STIPLED_TITLE(st) ((st).flag_mask.common.s.has_stipled_title)
-#define SCHAS_STIPLED_TITLE(st) ((st).change_mask.common.s.has_stipled_title)
-#define SFSET_HAS_STIPLED_TITLE(st,x) ((st).flags.common.s.has_stipled_title = !!(x))
-#define SMSET_HAS_STIPLED_TITLE(st,x) ((st).flag_mask.common.s.has_stipled_title = !!(x))
-#define SCSET_HAS_STIPLED_TITLE(st,x) ((st).change_mask.common.s.has_stipled_title = !!(x))
+#define SHAS_STIPPLED_TITLE(sf) ((sf).common.s.has_stippled_title)
+#define SFHAS_STIPPLED_TITLE(st) ((st).flags.common.s.has_stippled_title)
+#define SMHAS_STIPPLED_TITLE(st) ((st).flag_mask.common.s.has_stippled_title)
+#define SCHAS_STIPPLED_TITLE(st) ((st).change_mask.common.s.has_stippled_title)
+#define SFSET_HAS_STIPPLED_TITLE(st,x) ((st).flags.common.s.has_stippled_title = !!(x))
+#define SMSET_HAS_STIPPLED_TITLE(st,x) ((st).flag_mask.common.s.has_stippled_title = !!(x))
+#define SCSET_HAS_STIPPLED_TITLE(st,x) ((st).change_mask.common.s.has_stippled_title = !!(x))
 #define SHAS_WINDOW_FONT(sf) ((sf).common.has_window_font)
 #define SFHAS_WINDOW_FONT(st) ((st).flags.common.has_window_font)
 #define SMHAS_WINDOW_FONT(st) ((st).flag_mask.common.has_window_font)
